--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ header .nav-links
 {
     width: 100%;
     height: 50vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.432), rgba(0, 0, 0, 0.438)), url(/assets/hero.jpg) no-repeat center / cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.432), rgba(0, 0, 0, 0.438)), url(/assets/images/hero.jpg) no-repeat center / cover;
     color: white;
 }
 
@@ -264,7 +264,7 @@ align-items: center;
 
 .card-1
 {
-    background-image: url(/assets/card-1.jpg);
+    background-image: url(/assets/images/card-1.jpg);
 }
 
 .card a
@@ -274,22 +274,22 @@ align-items: center;
 
 .card-2
 {
-    background-image: url(/assets/card-2.jpg);
+    background-image: url(./assets/images/card-2.jpg);
 }
 
 .card-3
 {
-    background-image: url(/assets/card-3.jpg);
+    background-image: url(./assets/images/card-3.jpg);
 }
 
 .card-4
 {
-    background-image: url(/assets/card-4.jpg);
+    background-image: url(./assets/images/card-4.jpg);
 }
 
 .card-5
 {
-    background-image: url(/assets/card-5.jpg);
+    background-image: url(./assets/images/card-5.jpg);
 }
 
 .card:hover
