--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ header .nav-links
 {
     width: 100%;
     height: 50vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.432), rgba(0, 0, 0, 0.438)), url(/assets/images/hero.jpg) no-repeat center / cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.432), rgba(0, 0, 0, 0.438)), url(./assets/images/hero.jpg) no-repeat center / cover;
     color: white;
 }
 
@@ -264,7 +264,7 @@ align-items: center;
 
 .card-1
 {
-    background-image: url(/assets/images/card-1.jpg);
+    background-image: url(./assets/images/card-1.jpg);
 }
 
 .card a
